src/objects/MX_WB_GenerarXML__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Guarda las URLS para hacer envío a CTI</description>
    <fields>
        <fullName>soapENV__c</fullName>
        <label>soapENV</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>soapEncoding__c</fullName>
        <label>soapEncoding</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>soapWS__c</fullName>
        <label>soapWS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>soapXSD__c</fullName>
        <label>soapXSD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>soapXSI__c</fullName>
        <label>soapXSI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>MX_WB_GenerarXML</label>
</CustomObject>